--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,4 +1,5 @@
-/* ./src/index.css */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Satisfy&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,4 +10,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Lato', sans-serif;
 }
